# fetchbim

./: .gitignore  LICENSE  README.md  main.py  requirements.txt  secrets.py  settings.py  setup.cfg  setup.py
fetchbim/: __init__.py  admin.py  api_endpoints.py  async.ipynb  async_notion.py  attributes.py  bimservice.py  client.py  config.py  db_to_notion.py  family.py  fetch.py  notion.py  notion2.py  query.py  recursive_json.ipynb  sequence.py  settings.py  settings_old.py  teams.py  utils.py
fetchbim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fetchbim/fetch/: __init__.py  category.py  family.py  family_type.py  file.py  grouped_family.py  (+5 more)
json references/: familytype.json  model_group.json  post2.json  query.json  shared.json
samples/: SSG_Fetch_Product_Types_Shared_Rules.csv  admin_api.ipynb  async.ipynb  async.py  async_admin_query.py  async_icon_replace.py  async_notion_families.py  async_notion_families2.py  async_test.py  basic_sample_family.rfa  casework_groups.csv  casework_groups_pricing.xlsx  change_name_lab.ipynb  client_test.ipynb  delete_post.json  dmg_child.json  duplicate_files.ipynb  family.py  family_example.py  family_type.ipynb  file_example.py  get.json  get_family.ipynb  group_prices.csv  group_to_schedule.ipynb  image_resize.ipynb  json_decode.ipynb  lookup_attributes.ipynb  notion_children.ipynb  notion_icon.ipynb  patch_test.ipynb  post.json  property_cleanup.ipynb  query.ipynb  query_admin.ipynb  query_notion.ipynb  replace_groups.ipynb  request_exceptions.ipynb  resize_images.ipynb  script.py  (+13 more)
tests/: test.ipynb  test_fetchbim.py
(+34 files in other folders)
