[metadata]
name = fetchbim
version = 0.1.0
author = Kyle Bruxvoort
author_email = kbruxvoort@gmail.com
description = This package is for integrating various databases for Southwest Solutions Group BIM department
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kbruxvoort/fetchbim
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
include_package_data = False